--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,21 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/loading.gif
+     - assets/images/image001.jpg
+     - assets/images/image002.jpg
+     - assets/images/image003.jpg
+     - assets/images/image004.jpg
+     - assets/images/image005.jpg
+     - assets/images/image006.jpg
+     - assets/images/image007.jpg
+     - assets/images/image008.jpg
+     - assets/images/image009.jpg
+     - assets/images/image010.jpg
+     - assets/images/image011.jpg
+     - assets/images/image012.jpg
+     - assets/images/image013.jpg
+     - assets/images/image014.jpeg
+     - assets/images/image015.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -59,12 +74,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: PatrickHand
+       fonts:
+          - asset: assets/fonts/Patrick_Hand/PatrickHand-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
