--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,10 +63,24 @@ flutter:
      - assets/images/image013.jpg
      - assets/images/image014.jpeg
      - assets/images/image015.jpg
-     - assets/images/yoga1.jpeg
-     - assets/images/yoga2.jpeg
-     - assets/images/yoga3.jpeg
-     - assets/images/yoga4.jpeg
+     - assets/images/Byoga1.jpeg
+     - assets/images/Byoga2.jpeg
+     - assets/images/Byoga3.jpeg
+     - assets/images/Byoga4.jpeg
+     - assets/images/Iyoga1.jpeg
+     - assets/images/Iyoga2.jpeg
+     - assets/images/Iyoga3.jpeg
+     - assets/images/Iyoga4.jpeg
+     - assets/images/Ayoga1.jpeg
+     - assets/images/Ayoga2.jpeg
+     - assets/images/Ayoga3.jpeg
+     - assets/images/Ayoga4.jpeg
+     - assets/images/Arm1.jpeg
+     - assets/images/Arm2.jpeg
+     - assets/images/Arm3.jpeg
+     - assets/images/Arm4.jpeg
+     - assets/images/Arm5.jpeg
+     - assets/images/Arm6.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
