--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   percent_indicator: ^3.0.1
+  firebase_auth: ^1.3.0
+  google_sign_in: ^5.0.4
+  font_awesome_flutter: ^9.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
