--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   percent_indicator: ^3.0.1
   firebase_auth: ^1.3.0
+  firebase_core: ^1.2.1
+  cloud_firestore: ^2.2.1
   google_sign_in: ^5.0.4
   font_awesome_flutter: ^9.0.0
   provider: ^5.0.0
