--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,23 @@ dependencies:
   google_sign_in: ^5.0.4
   font_awesome_flutter: ^9.0.0
   provider: ^5.0.0
+  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash: ^1.1.8+4
+
+flutter_native_splash:
+  color: "#ffbd59"
+  image: "assets/images/appicon.png"
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/appicon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
