--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^5.0.0
   flutter_launcher_icons: ^0.9.0
   flutter_native_splash: ^1.1.8+4
+  numberpicker: ^2.1.1
 
 flutter_native_splash:
   color: "#ffbd59"
